Fixed the issue of overlapping menu dropdown and submenu dropdown

--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -22,10 +22,11 @@
 
 @mixin submenu-bar{
   width: 100%;
-  padding: 8px 10px;
+  padding: 8px 4%;
   background-color: white;
-  position: relative;
+  position: absolute;
   margin-top: 65px;
+  top: 60px;
   .selected-item{
     background-color: lightgray;
     padding: 10px 20px;
@@ -44,10 +45,10 @@
   .submenu-bar-dropdown{
     position: absolute;
     background-color: white;
-    z-index: 1;
+    //z-index: 1;
     top: 45px;
     box-shadow: 1px 3px 10px #bababa;
-    width: 200px;
+    width: 92%;
     .submenu-item{
       //padding: 5px 10px;
       span{
